feat: select by juz, track questions, total question

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 .searchWrapper{
-    border:none !important;
+    border-color:#383f47 !important;
+    padding:10px 5px !important;
     width:100% !important;
 }
 
